# berlin-appointment-finder

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: berlin_appointment_checker.yml  berlin_appointment_finder.yml
app/: __main__.py  check.py  config.py  send.py
berliner_buergerbot/: __main__.py  check.py  compose.py  config.py  send.py
test/: test_check.py  test_compose.py  test_config.py  test_send.py
test/fixtures/: Day.html  Day_multiple.html  Taken.html
test/fixtures/Day_files/: bde-bootstrap.css  bo-foot.js  bo-info.js  default.css  default.js  index.js
test/fixtures/Day_multiple_files/: -wt-safetag.js  sub-vendor.css
test/fixtures/Taken_files/: appointment.css  bde-index.css  bo-head.js
