[project]
name = ""
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.7,<3.13"
dependencies = [
    "playwright>=1.47.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "twilio>=9.3.3",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.9",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=lcov:.coverage.info --cov-report term-missing"
asyncio_default_fixture_loop_scope = "function"
markers = [
	"local",
]
